--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-unn-portal",
-  "version": "0.6.1",
+  "version": "0.6.2",
   "description": "unn portal nodejs sdk",
   "main": "portal.js",
   "scripts": {
@@ -25,10 +25,10 @@
   },
   "homepage": "https://github.com/SoNiceElijah/node-unn-portal#readme",
   "dependencies": {
-    "axios": "^0.20.0"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
-    "mocha": "^8.1.3",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1"
   }
 }
